// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-q44vm6,
[data-css-q44vm6] {
  -webkit-transition: all 0.3s ease-in-out;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 70px;
  border-radius: 6px;
  background-color: rgba(255,255,255,0);
  transition: all 0.3s ease-in-out;
  display: block;
  overflow: hidden;
}

<SearchBar>
  <StyledWrapper>
    <div
      className="css-q44vm6"
    />
  </StyledWrapper>
</SearchBar>
`;

exports[`enzyme.mount 2`] = `
.css-q44vm6,
[data-css-q44vm6] {
  -webkit-transition: all 0.3s ease-in-out;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 70px;
  border-radius: 6px;
  background-color: rgba(255,255,255,0);
  transition: all 0.3s ease-in-out;
  display: block;
  overflow: hidden;
}

<StyledWrapper
  open={false}
>
  <div
    className="css-q44vm6"
  />
</StyledWrapper>
`;

exports[`enzyme.mount 3`] = `
.css-1dafbxg,
[data-css-1dafbxg] {
  -webkit-transition: all 0.5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 450px;
  border-radius: 50px;
  background-color: rgba(0,0,0,0.5);
  transition: all 0.5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  display: block;
  overflow: hidden;
}

<StyledWrapper
  open={true}
>
  <div
    className="css-1dafbxg"
  />
</StyledWrapper>
`;

exports[`enzyme.render 1`] = `
.css-q44vm6,
[data-css-q44vm6] {
  -webkit-transition: all 0.3s ease-in-out;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 70px;
  border-radius: 6px;
  background-color: rgba(255,255,255,0);
  transition: all 0.3s ease-in-out;
  display: block;
  overflow: hidden;
}

<div
  class="css-q44vm6"
/>
`;

exports[`enzyme.render 2`] = `
.css-q44vm6,
[data-css-q44vm6] {
  -webkit-transition: all 0.3s ease-in-out;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 70px;
  border-radius: 6px;
  background-color: rgba(255,255,255,0);
  transition: all 0.3s ease-in-out;
  display: block;
  overflow: hidden;
}

<div
  class="css-q44vm6"
/>
`;

exports[`enzyme.render 3`] = `
.css-1dafbxg,
[data-css-1dafbxg] {
  -webkit-transition: all 0.5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 450px;
  border-radius: 50px;
  background-color: rgba(0,0,0,0.5);
  transition: all 0.5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  display: block;
  overflow: hidden;
}

<div
  class="css-1dafbxg"
/>
`;

exports[`enzyme.shallow 1`] = `<StyledWrapper />`;

exports[`enzyme.shallow 2`] = `
.css-q44vm6,
[data-css-q44vm6] {
  -webkit-transition: all 0.3s ease-in-out;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 70px;
  border-radius: 6px;
  background-color: rgba(255,255,255,0);
  transition: all 0.3s ease-in-out;
  display: block;
  overflow: hidden;
}

<div
  className="css-q44vm6"
/>
`;

exports[`enzyme.shallow 3`] = `
.css-1dafbxg,
[data-css-1dafbxg] {
  -webkit-transition: all 0.5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 450px;
  border-radius: 50px;
  background-color: rgba(0,0,0,0.5);
  transition: all 0.5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  display: block;
  overflow: hidden;
}

<div
  className="css-1dafbxg"
/>
`;
